--- a/prototype/src/assets/scss/_user-variables.scss
+++ b/prototype/src/assets/scss/_user-variables.scss
@@ -6,6 +6,12 @@
 // Example of a variable override to change Landkit's background color
 // Remove the "//" to comment it in and see it in action!
 // $font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;
+
+$container-max-widths: (sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px) !default;
+
 $black: #111111 !default;
 $gray-100: #fafafa !default;
 $gray-200: #f6f6f6 !default;
