--- a/prototype/src/partials/footer.html
+++ b/prototype/src/partials/footer.html
@@ -4,180 +4,127 @@
       <div class="col-12 col-md-4 col-lg-3">
         
         <!-- Brand -->
-        <img src="@@webRoot/assets/img/brand.svg" alt="..." class="footer-brand img-fluid mb-2">
+        <img src="@@webRoot/assets/img/logo-h.svg" alt="..." class="footer-brand img-fluid mb-2">
 
         <!-- Text -->
-        <p class="text-gray-700 mb-2">
-          A better way to build.
-        </p>
+        <h6 class="text-gray-700 mb-5">
+          The one-off exclusive posters.
+        </h6>
 
         <!-- Social -->
         <ul class="list-unstyled list-inline list-social mb-6 mb-md-0">
           <li class="list-inline-item list-social-item mr-3">
-            <a href="#!" class="text-decoration-none">
+            <a href="" class="text-decoration-none" target="_blank">
               <img src="@@webRoot/assets/img/icons/social/instagram.svg" class="list-social-icon" alt="...">
             </a>
           </li>
           <li class="list-inline-item list-social-item mr-3">
-            <a href="#!" class="text-decoration-none">
+            <a href="" class="text-decoration-none" target="_blank">
               <img src="@@webRoot/assets/img/icons/social/facebook.svg" class="list-social-icon" alt="...">
             </a>
           </li>
-          <li class="list-inline-item list-social-item mr-3">
-            <a href="#!" class="text-decoration-none">
-              <img src="@@webRoot/assets/img/icons/social/twitter.svg" class="list-social-icon" alt="...">
-            </a>
-          </li>
           <li class="list-inline-item list-social-item">
-            <a href="#!" class="text-decoration-none">
+            <a href="" class="text-decoration-none" target="_blank">
               <img src="@@webRoot/assets/img/icons/social/pinterest.svg" class="list-social-icon" alt="...">
             </a>
           </li>
         </ul>
 
       </div>
-      <div class="col-6 col-md-4 col-lg-2">
+      <div class="col-lg-8 offset-lg-1">
+        <div class="row">
+          <div class="col-6 col-md-4">
         
-        <!-- Heading -->
-        <h6 class="font-weight-bold text-uppercase text-gray-700">
-          Products
-        </h6>
-
-        <!-- List -->
-        <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Page Builder
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              UI Kit
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Styleguide
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Documentation
-            </a>
-          </li>
-          <li>
-            <a href="#!" class="text-reset">
-              Changelog
-            </a>
-          </li>
-        </ul>
-
-      </div>
-      <div class="col-6 col-md-4 col-lg-2">
-        
-        <!-- Heading -->
-        <h6 class="font-weight-bold text-uppercase text-gray-700">
-          Services
-        </h6>
-
-        <!-- List -->
-        <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Documentation
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Changelog
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Pagebuilder
-            </a>
-          </li>
-          <li>
-            <a href="#!" class="text-reset">
-              UI Kit
-            </a>
-          </li>
-        </ul>
-
-      </div>
-      <div class="col-6 col-md-4 offset-md-4 col-lg-2 offset-lg-0">
-        
-        <!-- Heading -->
-        <h6 class="font-weight-bold text-uppercase text-gray-700">
-          Connect
-        </h6>
-
-        <!-- List -->
-        <ul class="list-unstyled text-muted mb-0">
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Page Builder
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              UI Kit
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Styleguide
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Documentation
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Changelog
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Documentation
-            </a>
-          </li>
-          <li>
-            <a href="#!" class="text-reset">
-              Changelog
-            </a>
-          </li>
-        </ul>
-
-      </div>
-      <div class="col-6 col-md-4 col-lg-2">
-        
-        <!-- Heading -->
-        <h6 class="font-weight-bold text-uppercase text-gray-700">
-          Legal
-        </h6>
-
-        <!-- List -->
-        <ul class="list-unstyled text-muted mb-0">
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Documentation
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Changelog
-            </a>
-          </li>
-          <li>
-            <a href="#!" class="text-reset">
-              Pagebuilder
-            </a>
-          </li>
-        </ul>
-
+            <!-- Heading -->
+            <h6 class="font-weight-bold text-uppercase text-gray-700 mb-3">
+              Help
+            </h6>
+    
+            <!-- List -->
+            <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
+              <li class="mb-2">
+                <a href="#!" class="text-reset">
+                  FAQ
+                </a>
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="text-reset">
+                  Size guide
+                </a>
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="text-reset">
+                  Customer Service
+                </a>
+              </li>
+              <li>
+                <a href="#!" class="text-reset">
+                  Contact
+                </a>
+              </li>
+            </ul>
+    
+          </div>
+          <div class="col-6 col-md-4">
+            
+            <!-- Heading -->
+            <h6 class="font-weight-bold text-uppercase text-gray-700 mb-3">
+              Sitemap
+            </h6>
+    
+            <!-- List -->
+            <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
+              <li class="mb-2">
+                <a href="#!" class="text-reset">
+                  Posters
+                </a>
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="text-reset">
+                  Cart
+                </a>
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="text-reset">
+                  Checkout
+                </a>
+              </li>
+              <li>
+                <a href="#!" class="text-reset">
+                  Your account
+                </a>
+              </li>
+            </ul>
+    
+          </div>
+          <div class="col-6 col-md-4">
+            
+            <!-- Heading -->
+            <h6 class="font-weight-bold text-uppercase text-gray-700 mb-3">
+              Legal
+            </h6>
+    
+            <!-- List -->
+            <ul class="list-unstyled text-muted mb-0">
+              <li class="mb-2">
+                <a href="#!" class="text-reset">
+                  Returns Policy 
+                </a>
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="text-reset">
+                  Terms and Conditions
+                </a>
+              </li>
+              <li>
+                <a href="#!" class="text-reset">
+                  Cookie Policy
+                </a>
+              </li>
+            </ul>
+    
+          </div>
+        </div>
       </div>
     </div> <!-- / .row -->
   </div> <!-- / .container -->
