--- a/prototype/src/assets/scss/_user.scss
+++ b/prototype/src/assets/scss/_user.scss
@@ -1,36 +1,42 @@
-// 
+//
 // user.scss
 // Use this to write your custom SCSS
 //
 
 .navbar-dark .btn-cart {
-    filter: brightness(0.5) invert(1);
+  filter: brightness(0.5) invert(1);
 }
 
 .playfair {
-    font-family: 'Playfair Display', serif!important;
+  font-family: "Playfair Display", serif !important;
 }
 
 .font-weight-bolds {
-    font-weight: 800!important;
+  font-weight: 800 !important;
 }
 
 .navbar {
-    padding: 1em 0;
+  padding: 1em 0;
 }
 
 .border-black {
-    border: 6px solid $black;
+  border: 6px solid $black;
 }
 
 .border-white {
-    border: 13px solid white;
+  border: 13px solid white;
 }
 
 .pay-icon {
-    font-size: 1.6em;
+  font-size: 1.6em;
 }
 
-.container {
-
+.whole-element-link {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9;
 }
